# crypto-aggregator

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  tox.ini
alembic/: env.py
alembic/versions/: 88a7d904f91f_add_unique_constraint_for_asset_quote_.py  dcfdb77f0adf_initial_revision.py
src/api/: __init__.py  config.py  database.py  db_migrations.py  main.py  models.py  schemas.py
src/cache/: redis.py
src/ingestion/: clients.py  price_ingestion.py
src/worker/: __init__.py  celery_app.py  tasks.py
tests/: test_api.py  test_client.py  test_ingestion.py
