[project]
name = "crypto-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "fastapi[all]>=0.128.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pydocstyle>=6.3.0",
    "pylint>=4.0.4",
    "tox>=4.33.0",
]
