[project]
name = "crypto-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "celery>=5.6.2",
    "fastapi[all]>=0.128.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "psycopg2-binary>=2.9.11",
    "pydocstyle>=6.3.0",
    "pylint>=4.0.4",
    "tox>=4.33.0",
]

[tool.black]
line-length = 100

[tool.mypy]
disable_error_code = ["misc"]
